# progetto_colonne_elisa

progetto_colonne/: Avvio_Arresto.hpp  CMakeLists.txt  CampoNonTrovato.h  Colonna.cpp  Colonna.h  ColonnaChar.cpp  ColonnaChar.h  ColonnaDate.cpp  ColonnaDate.h  ColonnaFloat.cpp  ColonnaFloat.h  ColonnaInt.cpp  ColonnaInt.h  ColonnaText.cpp  ColonnaText.h  ColonnaTime.cpp  ColonnaTime.h  Comandi.hpp  ControlloSintassi.cpp  ControlloSintassi.h  FileError.h  FormatTypeError.h  InexistentTable.h  InsertAutoIncrement.h  InvalidCondition.h  InvalidDate.h  InvalidMatch.h  InvalidOperator.h  InvalidTime.h  LinkedError.h  Memoria.txt  NotNullError.h  PrimKeyError.h  PrimaryKeyAlreadyExisting.h  SalvataggioCaricamento.hpp  SecKeyAlreadyExisting.h  SecKeyError.h  SecKeyNotFound.h  Tabella.cpp  Tabella.h  (+11 more)
